--- a/css/style.css
+++ b/css/style.css
@@ -2,48 +2,61 @@
   	font-family: "MuseoSansCyrl";
   	font-weight: 100;
 	font-style: normal;
-	src: url("../Fonts/MuseoSansCyrl 100.otf")  format("opentype"); /* Safari, Android, iOS */
+	src: url(../Fonts/MuseoSansCyrl 100.eot?) format("eot"), 
+         url(../Fonts/MuseoSansCyrl 100.woff) format("woff"), 
+         url(../Fonts/MuseoSansCyrl 100.ttf) format("truetype");
 }
 
 @font-face {
   	font-family: "MuseoSansCyrl";
   	font-weight: 100;
 	font-style: italic;
-	src: url("../Fonts/MuseoSansCyrl 100 Italic.otf")  format("opentype"); /* Safari, Android, iOS */
+	src: url(../Fonts/MuseoSansCyrl 100 Italic.eot?) format("eot"), 
+         url(../Fonts/MuseoSansCyrl 100 Italic.woff) format("woff"), 
+         url(../Fonts/MuseoSansCyrl 100 Italic.ttf) format("truetype");
 }
 
 @font-face {
   	font-family: "MuseoSansCyrl";
   	font-weight: normal;
 	font-style: normal;
-	src: url("../Fonts/MuseoSansCyrl 300.otf")  format("opentype"); /* Safari, Android, iOS */
+	src: url(../Fonts/MuseoSansCyrl 300.eot?) format("eot"), 
+         url(../Fonts/MuseoSansCyrl 300.woff) format("woff"), 
+         url(../Fonts/MuseoSansCyrl 300.ttf) format("truetype");
 }
 
 @font-face {
   	font-family: "MuseoSansCyrl";
   	font-weight: normal;
 	font-style: italic;
-	src: url("../Fonts/MuseoSansCyrl 300 Italic.otf")  format("opentype"); /* Safari, Android, iOS */
-	
+	src: url(../Fonts/MuseoSansCyrl 300 Italic.eot?) format("eot"), 
+         url(../Fonts/MuseoSansCyrl 300 Italic.woff) format("woff"), 
+         url(../Fonts/MuseoSansCyrl 300 Italic.ttf) format("truetype");
 }
 
 @font-face {
   	font-family: "MuseoSansCyrl";
   	font-weight: bold;
 	font-style: normal;
-	src: url("../Fonts/MuseoSansCyrl 900.otf")  format("opentype"); /* Safari, Android, iOS */
+	src: url(../Fonts/MuseoSansCyrl 900.eot?) format("eot"), 
+         url(../Fonts/MuseoSansCyrl 900.woff) format("woff"), 
+         url(../Fonts/MuseoSansCyrl 900.ttf) format("truetype");
 }
 
 @font-face {
   	font-family: "MuseoSansCyrl";
   	font-weight: bold;
 	font-style: italic;
-	src: url("../Fonts/MuseoSansCyrl 900 Italic.otf")  format("opentype"); /* Safari, Android, iOS */
+	src: url(../Fonts/MuseoSansCyrl 900 Italic.eot?) format("eot"), 
+         url(../Fonts/MuseoSansCyrl 900 Italic.woff) format("woff"), 
+         url(../Fonts/MuseoSansCyrl 900 Italic.ttf) format("truetype");
 }
 
 @font-face {
   font-family: "Natasha";
-	src: url("../Fonts/Natasha.ttf")  format("truetype");
+	src: url(../Fonts/Natasha.eot?) format("eot"), 
+         url(../Fonts/Natasha.woff) format("woff"), 
+         url(../Fonts/Natasha.ttf) format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
